force-app/main/default/objects/ssot__ProgramCohortMember__dlm/fields/ssot__IsRemovedFromCohort__c.field-meta.xml
<CustomField>
    <fullName>ssot__IsRemovedFromCohort__c</fullName>
    <label>Removed From Cohort</label>
    <length>6</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>IsRemovedFromCohort</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>