force-app/main/default/objects/ssot__ProgramCohortMember__dlm/fields/ssot__ProgramCohortId__c.field-meta.xml
<CustomField>
    <fullName>ssot__ProgramCohortId__c</fullName>
    <label>Program Cohort</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ProgramCohortId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>