force-app/main/default/objects/ssot__ProgramCohortMember__dlm/fields/ssot__ProgramEnrollmentStatus__c.field-meta.xml
<CustomField>
    <fullName>ssot__ProgramEnrollmentStatus__c</fullName>
    <label>Program Enrollment Status</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ProgramEnrollmentStatus</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>