force-app/main/default/objects/ssot__ProgramCohortMember__dlm/fields/ssot__rel_1716668778294_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1716668778294_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ProgramCohortMember_ProgramEnrollmen_rel</label>
    <referenceTo>ssot__ProgramEnrollment__dlm</referenceTo>
    <relationshipLabel>ProgramCohortMember_ProgramEnrollmen_rel</relationshipLabel>
    <relationshipName>rel_1716668778294_end</relationshipName>
    <type>Lookup</type>
</CustomField>