force-app/main/default/objects/ssot__ProgramCohortMember__dlm/fields/ssot__RemovalDate__c.field-meta.xml
<CustomField>
    <fullName>ssot__RemovalDate__c</fullName>
    <label>Removal Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>RemovalDate</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Date</type>
</CustomField>